src/objects/RoundRobin_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Last_Record_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Record Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abandoners</fullName>
                </value>
                <value>
                    <fullName>AS BAP Courtesy</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Chargebacks</fullName>
                </value>
                <value>
                    <fullName>Declines</fullName>
                </value>
                <value>
                    <fullName>IP Abandoners</fullName>
                </value>
                <value>
                    <fullName>IP Services</fullName>
                </value>
                <value>
                    <fullName>LLC/INC Business Account Services</fullName>
                </value>
                <value>
                    <fullName>Order Save</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>RA Renewal</fullName>
                </value>
                <value>
                    <fullName>Trademark Account Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoundRobin_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is allow active flag can take people in and out of the RoundRobin based on schedules of agent.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>RoundRobin Rule</label>
    <listViews>
        <fullName>AM_Trademark</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>User__c</columns>
        <columns>Order__c</columns>
        <columns>Last_Record_Holder__c</columns>
        <columns>Team__c</columns>
        <columns>Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Trademark Account Services</value>
        </filters>
        <label>AM Trademark</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Order</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Team__c</columns>
        <columns>User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Last_Record_Holder__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Order</value>
        </filters>
        <label>Active - Order</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Team__c</columns>
        <columns>User__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Record_Holder__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Team__c</columns>
        <columns>User__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Record_Holder__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Services</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Team__c</columns>
        <columns>User__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Record_Holder__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Business Services</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RoundRobin_Rule__c.Sales</value>
        </filters>
        <label>Business Services</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>RoundRobin Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RoundRobin Rules</pluralLabel>
    <recordTypes>
        <fullName>Business_Account_Services</fullName>
        <active>true</active>
        <description>For managing account manager team LLC/INC Business Account Services</description>
        <label>Business Account Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Save</fullName>
        <active>true</active>
        <description>For managing Order Save Records for the Round Robin Rules</description>
        <label>Order Save</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_Start</fullName>
        <active>true</active>
        <label>Quick Start</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>For managing Sales related records</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trademark_Account_Services</fullName>
        <active>true</active>
        <description>For managing account manager team Trademark Account Services</description>
        <label>Trademark Account Services</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>